2005-01-12  Paolo Borelli  <pborelli@katamail.com>

	* savecopy/savecopy.c: enable remote bookmarks in the chooser.

2005-01-12  Paolo Borelli  <pborelli@katamail.com>

	* taglist/gedit-taglist-plugin-parser.c: remove deprecated
	gnome-i18n stuff.

==== gedit 2.9.4 ====

2005-01-11  Paolo Maggi  <paolo@gnome.org>

	* changecase/changecase.gedit-plugin.desktop.in: fixed Copyright
	string

2005-01-10  Paolo Borelli  <pborelli@katamail.com>

	* savecopy/*: added a "Save a Copy" plugin.

2005-01-10  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #145085: Tag list plugin is not localized.
	Patch by Takao Fujiwara <Takao.Fujiwara@sun.com>

	* taglist/HTML.tags: removed

	* taglist/HTML.tags.xml.in: new file

	* taglist/Latex.tags: removed

	* taglist/Latex.tags.xml.in: new file

	* taglist/Makefile.am: generate .tags file from .tags.xml.in files

	* taglist/XSLT.tags: removed

	* taglist/XSLT.tags.xml.in: new file

	* taglist/gedit-taglist-plugin-parser.c (get_tag_group)
	(lookup_best_lang) (parse_taglist_file): fixed the .tags file parser
	to read translated names

2004-12-05  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #160411: Misspelled word in spellchecker dialog

	* spell/gedit-spell-checker-dialog.c
	(gedit_spell_checker_dialog_init)
	(gedit_spell_checker_dialog_destroy)
	(gedit_spell_checker_dialog_set_spell_checker)
	(gedit_spell_checker_dialog_set_misspelled_word)
	(add_word_button_clicked_handler) (ignore_button_clicked_handler)
	(ignore_all_button_clicked_handler) (change_button_clicked_handler)
	(change_all_button_clicked_handler)
	(gedit_spell_checker_dialog_set_completed): s/mispelled/misspelled

	* spell/gedit-spell-checker-dialog.h: s/mispelled/misspelled

	* spell/spell-checker.glade2: s/mispelled/misspelled

	* spell/spell.c (get_next_misspelled_word) (ignore_cb) (change_cb)
	(change_all_cb) (add_word_cb) (show_no_misspelled_words_dialog)
	(spell_cb): s/mispelled/misspelled


2004-11-25  Paolo Borelli  <pborelli@katamail.com>
