@@ -1,6 +1,7 @@
 2005-01-12  Paolo Borelli  <pborelli@katamail.com>
 
-	* savecopy/savecopy.c: enable remote bookmarks in the chooser.
+	* savecopy/savecopy.c: enable remote bookmarks in the chooser and
+	set the suggested filename.
 
 2005-01-12  Paolo Borelli  <pborelli@katamail.com>
 
